<resources>
    <string name="app_name">My Application</string>
    <string name="add_your_shop">Add Your Shop</string>
    <string name="name">Name</string>
    <string name="uq">Unanswered Questions</string>
    <string name="reply">Reply</string>
    <string name="question">Question</string>
    <string name="qempty"> </string>
    <string name="reject">Reject</string>
    <string name="addQ">Add a Question</string>
    <string name="qTopic">What is this about ?</string>
    <string name="qDes">Whai is you question ?</string>
    <string name="questionMain">Type your Question</string>
    <string name="preview">Preview</string>
    <string name="post">Post</string>
    <string name="helpCenter">Help Center</string>
    <string name="searchQ">Search Question</string>
    <string name="login">Login</string>
    <string name="createAcc">Create Account</string>
    <string name="browseQ">Browse Question</string>
    <string name="mostRecent">Most Recent</string>
    <string name="filterBy">Filter By</string>
    <string name="selectTopic">Select Topic</string>
    <string name="topQ">Top Questions</string>
    <string name="addQuestion">Add a Question</string>
    <string name="time">Time</string>

    <string name="date">Date</string>
    <string name="questionDescription"></string>
    <string name="image"> </string>
    <string name="image2"> </string>
    <string name="unQ"> </string>
    <string name="newQ">New Question</string>
    <string name="newQuestion"> </string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="category">Category</string>
    <string name="categoryDes"> </string>
    <string name="qSuccess">Question</string>
    <string name="right"></string>
    <string name="findQ"></string>
    <string name="bu">Unkonwn</string>
    <string name="make_appoinment">Unkonwn</string>
    <string name="contact_no">Unkonwn</string>
    <string name="submit">Unkonwn</string>submit
=======
    <string name="submit2">Submit</string>
    <string name="brd_details">Boarding details</string>
    <string name="brd_name">Boarding name</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="app_make">Make Appoinment</string>
    <string name="line_1">Address line 1</string>
    <string name="line_2">Address line 2</string>
    <string name="p_oder">place an order</string>
    <string name="d_oder">delete an order</string>
    <string name="button" />
    <string name="feed" />
    <string name="sort1">Sort</string>
    <string name="filter1">Filter</string>
    <string name="map1">Map</string>
    <string name="brd_place">Boarding Places</string>
    <string name="add_coment">Add Comment</string>
    <string name="add_boarding">Add Boarding Place</string>
    <string name="price">Price</string>
    <string name="images">Images</string>
    <string name="location">Mark Location</string>
    <string name="add_image">Add Images</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
>>>>>>> origin/master
</resources>
