<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp">


    <TextView
        android:id="@+id/textView"
        android:text="@string/make_appoinment"
        android:layout_gravity="center_horizontal"
        android:layout_width="211dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:fontFamily="@font/nunito_bold"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
           android:id="@+id/app_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/name"
           android:layout_marginLeft="50dp"
           android:layout_marginRight="300dp"
           android:layout_marginTop="30dp"
           android:layout_gravity="left"
           android:textStyle="bold"/>

        <EditText
            android:id="@+id/app_edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="30dp"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contact_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_no"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="left"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/app_edit_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="30dp"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="300dp"
            android:text="@string/date"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/app_edit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:inputType="date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="300dp"
            android:text="@string/time"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:inputType="time" />

    </LinearLayout>

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/submit" />

</LinearLayout>