<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/s"
    android:weightSum="10"
    tools:context=".activity_boarding_details2">

    <LinearLayout
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/brd_details"
            android:textAlignment="center"
            android:textColor="#FFC107"
            android:textSize="22dp" />

        <ImageView
            android:layout_marginTop="50dp"
            android:layout_marginLeft="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/boarding"/>

        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brd_name"
            android:textSize="18dp"
            />


        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Details"
            android:textSize="18dp"
            />

        <com.google.android.gms.maps.MapView
            android:layout_width="370dp"
            android:layout_height="100dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"></com.google.android.gms.maps.MapView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/address"
                android:textColor="#FFFFFF" />

            <EditText
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/description"
                android:textColor="#FFFFFF" />

            <EditText
                android:layout_width="243dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/contact_no"
                android:textColor="#FFFFFF" />

            <EditText
                android:layout_width="243dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <LinearLayout

            android:layout_marginTop="30dp"
            android:layout_marginBottom="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:layout_marginLeft="25dp"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_comment"
                android:layout_marginBottom="2dp"/>

            <Button
                android:layout_marginLeft="50dp"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_make"/>
        </LinearLayout>



    </LinearLayout>

</LinearLayout>